--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "bootstrap": "^5.1.3",
     "angular-bootstrap-md": "^12.1.0",
+    "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
