--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "angular-bootstrap-md": "^12.1.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
