--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~13.0.0",
     "angular-bootstrap-md": "^12.1.0",
     "bootstrap": "^5.1.3",
+    "cors": "2.8.5",
+    "express": "4.17.1",
     "font-awesome": "^4.7.0",
+    "mysql": "2.17.1",
     "ng2-file-upload": "^1.4.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
