--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "font-awesome": "^4.7.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "mysql": "2.17.1",
     "ng2-file-upload": "^1.4.0",
     "popper.js": "^1.16.1",
